compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_annotation_wrong_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub const numbers: List(Int) = [1, 2, 2.3]"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:39
  │
1 │ pub const numbers: List(Int) = [1, 2, 2.3]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float


